# DataSentry

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: datasentry.env.example  monitoring.example.toml  targets.example.toml
deploy/ops/: streamlake-startup.sh
deploy/systemd/: datasentry-alertmanager-proxy.service.example  datasentry-alertmanager-proxy.socket.example  datasentry-api.service.example
docs/: M2_HANDOFF.md  PROJECT_STATUS.md
docs/operations/: kafka-timeout-playbook.md  live-smoke.md  m9-component-runbooks.md  m9-exposure-maintenance-plan.md  m9-production-deployment.md  m9-risk-backlog.md  maintenance-evidence-record.md  monitoring-deployment.md  production-exposure-checklist.md  root-bin-script-audit.md  streamlake-service-hardening-plan.md  streamlake-startup.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
knowledge/: 01-system-overview.md  02-deployment-map.md  03-jobs-and-lineage.md  04-configuration-and-reliability.md  05-application-and-ai.md  06-operations.md  07-runtime-baseline-2026-06-25.md  08-risks-and-unknowns.md  09-agent-integration.md  INDEX.md
monitoring/alertmanager/: alertmanager.example.yml
monitoring/prometheus/: prometheus.example.yml
src/datasentry/: __init__.py  __main__.py  config.py  errors.py  logging.py  redaction.py
tests/: conftest.py
tests/scenarios/: test_cli_knowledge_diagnosis.py  test_cli_monitoring.py  test_cli_notification_simulate.py  test_cli_ops_preflight.py  test_cli_real_readonly_inspection.py  (+1 more)
(+251 files in other folders)
